# RAG

./: .gitignore  Makefile  README.md  day.md  moulinette_format_result.json  pyproject.toml  result.json  test.py
cache/: expand_query_cache.json
chroma_db/6244c232-e155-4a80-ace7-1aef3db10e41/: index_metadata.pickle
data/datasets/UnansweredQuestions/: dataset_docs_public.json
data/datasets_public/public/AnsweredQuestions/: dataset_docs_public.json
data/datasets_public/public/UnansweredQuestions/: dataset_code_public.json  dataset_docs_public.json
data/output/search_results/: dataset_docs_public.json
data/processed/: chunks.json
data/processed/bm25_index/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
src/: __main__.py  answering.py  chunking.py  evaluating.py  indexing.py  retrieving.py
src/utils/: input_model.py  model.py  query_expander.py
student/: __main__.py  answering.py  chunking.py  retrieving.py
student/utils/: input_model.py  model.py
