[project]
name = "RAG"
version = "1.0.0"
description = "RAG project from 42 cursus"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.3.8",
    "chromadb>=1.5.9",
    "dspy>=3.2.1",
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "langchain-text-splitters>=1.1.2",
    "mypy>=1.20.1",
    "nltk>=3.9.4",
    "spacy>=3.8.14",
    "tqdm>=4.67.3",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
]

